--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Caroline Hughes</title>
-    <link rel="stylesheet" href="/css/website.css">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
 
 <body>
