--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html>
 
   <head>
-    <meta charset="UTF-8">
     <title>Caroline Hughes</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
   </head>
 
 <body>
